# lava-outcome-chain

./: Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md
src/: chain.rs  hash.rs  lib.rs  receipt.rs  signing.rs  sink.rs  verify.rs
tests/: end_to_end.rs
